@startuml
'https://plantuml.com/class-diagram

interface TaiKhoanATM{
    bool kiemTraSoDu(int soTien)
    void nhanThongBao(int soTienRut, bool thanhCong)
}

class TaiKhoan{
    int soDu
    + DuaTheVaoATM()
    + RutTheKhoiATM()
}

class ATM{
    + rutTien(int soTienRut)
    + NhanThe(TaiKhoanATM theATM)
    + TraThe()
}



 ATM --> TaiKhoanATM:theATM
 TaiKhoanATM <|... TaiKhoan
 TaiKhoan ---> ATM:atm

note left of ATM
    Subject
end note

note left of TaiKhoan
    Observer
end note

@enduml